--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <h1>color flipper</h1>
+    <!-- javascript -->
+    <script src="app.js"></script>
 </body>
 </html>
