--- a/index.html
+++ b/index.html
@@ -13,14 +13,21 @@
             <h4>color flipper</h4>
             <ul class="nav-links">
                 <li>
-                    <a href="index.html"></a>
+                    <a href="index.html">home</a>
                 </li>
                 <li>
-                    <a href="hex.html"></a>
+                    <a href="hex.html">hex</a>
                 </li>
             </ul>
         </div>
     </nav>
+    <main>
+        <div class="container"></div>
+        <h2>background color : <span class="color">
+            #f1f15f8
+        </span></h2>
+        <button class="btn btn-hero" id="btn">click me</button>
+    </main>
     <!-- javascript -->
     <script src="app.js"></script>
 </body>
