--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>practice</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <nav>
         <div class="nav-center">
@@ -22,13 +24,15 @@
         </div>
     </nav>
     <main>
-        <div class="container"></div>
-        <h2>background color : <span class="color">
-            #f1f15f8
-        </span></h2>
-        <button class="btn btn-hero" id="btn">click me</button>
+        <div class="container">
+            <h2>background color : <span class="color">
+                    #f1f15f8
+                </span></h2>
+            <button class="btn btn-hero" id="btn">click me</button>
+        </div>
     </main>
     <!-- javascript -->
     <script src="app.js"></script>
 </body>
+
 </html>
